# security-ops-platform

./: .env.backup  .env_sample  .gitignore  .pre-commit-config.yaml  .venv_sample  AGENTS.md  AI_AGENTS.md  BOT_RECONNECTION_FIX.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Enhancements.MD  INTEGRATION_GUIDE.md  LICENSE  Makefile  PRELOADER_SERVICE.md  QUICKSTART_ENV.md  QUICKSTART_SECRETS.md  README.md  SECURITY.md  Test.py  WEBSERVER-DEPLOYMENT-README.md  ZSCALER.MD  ZSCALER_RESILIENCE_GUIDE.md  _config.yml  abandoned_tickets.py  activity_log.csv  activity_log.csv_sample  activity_log.txt  add_bot_to_peer_ping.py  aging_tickets.py  all.py  azdo.py  benchmark_startup.py  bot_rooms.py  chart.py  check_xsoar_db.py  config.py  constants.py  country_name_abbreviations.json  (+78 more)
.claude/: settings.json
_data/: docs_nav.yml
_layouts/: doc.html
bot/: __init__.py  performance_data.json
ci/: _xsiam_api.py  xsiam_deploy.py  xsiam_dry_run.py
data/: cell_names_by_shift.json  countries_by_code.json  country_name_abbreviations.json  data_maps.py  detection_source_codes_by_name.json  fun_messages.json  regions_by_country.json  rule_name_abbreviations.json  tanium_signals_catalog.csv
deployment/: DEPLOYMENT.md  TROUBLESHOOTING_SUMMARY.md  VM_INFRASTRUCTURE_FIXES.md  all_jobs.service  bot_status_api.py  claude_router_shim.py  com.ir.vllm-mlx-keepalive.plist  inference_watchdog.py  install_bot_status_api_service.sh  install_systemd_services.sh  ir-aide.service.fixed  ir-all-jobs.service  ir-bot-status-api.service  ir-epp-scheduler.service  ir-pokedex.service  ir-scheduler.service  ir-sleuth.service  ir-toodles.service.fixed  ir-web-server.service  kill_process.sh  kokoro_tts_server.py  local_inference_watchdog.py  log-viewer-index.html  log_viewer.py  logdy-index.html  manage_log_viewers.sh  manifest-mission-control.json  metiq_shim_server.py  mlx_auth_proxy.py  monitor_bot_reconnections.sh  nginx-log-viewer.conf  nginx-logdy.conf  pokedex-log.html  reranker_server.py  restart_all_bots.sh  restart_log_viewer.sh  run_peer_ping.sh  service_dependency_map.json  setup_log_viewers.sh  setup_logdy.sh  (+10 more)
docs/: AGENTS.md  AUDIT_README.md  BOT_DEPLOYMENT_STATUS.md  BOT_RECONNECTION_FIX.md  CLAUDE.md  CLAUDE_CODE_ADMIN_SETUP.md  CLAUDE_CODE_SETUP.md  CLAUDE_CODE_USER_SETUP.md  COUNTDOWN_TIMER_INTEGRATION.md  DEBUG_ANALYSIS.md  DEMISTO_PY_MIGRATION.md  DEPLOYMENT_CHECKLIST.md  ENV_ENCRYPTION.md  GEMINI.md  JARVIS_TIMEOUT_ROOT_CAUSE_ANALYSIS.md  MIGRATION_COMPLETE.md  NAV_TITLE_GUIDE.md  POKEDEX_EXECUTIVE_SUMMARY.md  PROXY_BYPASS_HUNT.md  QUICKSTART_ENV.md  QUICKSTART_SECRETS.md  README_ENV.md  README_RETRY.md  REFACTORING_PROGRESS.md  SECURITY_AUDIT_REPORT.md  SSL_VERIFICATION_GUIDE.md  TEAMS_TOODLES.md  TEAMS_WEBSOCKETS_TOODLES.md  TROUBLESHOOTING_SUMMARY.md  VM_INFRASTRUCTURE_FIXES.md  VM_NETWORK_TROUBLESHOOTING.md  VM_OPTIMIZATION.md  Vinay Vobbilichetty Resume.docx  WEBSOCKETS_14.2_CANARY_TEST.md  XSOAR_CONFIG_CHANGES.md  _config.yml  about.md  architecture.md  bot_resilience_usage.md  connection-health-improvements.md  (+5 more)
email_templates/: command_verification_email.html  employee_reach_out.html
examples/: metrics_examples.py
faiss_index_ollama/: index.faiss  index.pkl
mcp_server/: __main__.py  server.py
misc/: check_webex_permissions.py  messages_from_webex_room.py  webex_bot_details.py  webex_bot_rooms.py  webex_remove_bot_from_rooms.py  webex_room_members.py
misc_scripts/: add_bot_to_peer_ping.py  build_claude_code_docs.py  check_abnormal_token.py  check_key_access.py  chrome-with-proxy.sh  collect_network_evidence.sh  decrypt_secrets.py  embedding_server.py  encrypt_secrets.py  encrypt_secrets.sh  health_checker.py  mac_migration_setup.sh  migrate_csv_to_sqlite.py  monitor_bot_timeouts.sh  monitor_key_access.py  parse_tipper.py  restart_bots_with_pool_fix.sh  setup_key_audit.sh  sf_emailmessage_fields.py  show_peer_ping_topology.py  start_health_checker.sh  start_socks_proxy.sh  start_tanium_tunnel.py  start_tunnel_to_vm.py  tanium-onprem-tunnel.sh  test_powerbi.py  test_xsoar_migration.py  validate_vulnerable_products.py  verify_salesforce_remediation.py
n8n_workflows/: README.md  abnormal_email_alerts.json  alert_deduplication.json  azdo_work_item_sync.json  cert_transparency_monitor.json  cross_system_correlation.json  crowdstrike_webex_alerts.json  cve_vulnerability_alerts.json  (+28 more)
(+1202 files in other folders)
